v1.0.0/modules/schema/pages/class/WindGenTurbineType1aIEC.adoc
= `WindGenTurbineType1aIEC`
:toclevels: 4


+++Wind turbine IEC type 1A.
Reference: IEC 61400-27-1:2015, 5.5.2.2.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:WindGenTurbineType1aIEC`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/WindTurbineType1or2Dynamics.adoc[`WindTurbineType1or2Dynamics`]
**** xref::class/WindTurbineType1or2IEC.adoc[`WindTurbineType1or2IEC`]
***** *`WindGenTurbineType1aIEC`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
WindGenTurbineType1aIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindAeroConstIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindProtectionIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindMechIEC {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AsynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemoteInputSignal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




WindGenTurbineType1aIEC -> WindAeroConstIEC: WindAeroConstIEC


WindGenTurbineType1aIEC -> WindProtectionIEC: WindProtectionIEC


WindGenTurbineType1aIEC -> WindMechIEC: WindMechIEC


WindGenTurbineType1aIEC -> AsynchronousMachineDynamics: AsynchronousMachineDynamics


WindGenTurbineType1aIEC -> RemoteInputSignal: RemoteInputSignal


WindGenTurbineType1aIEC -> DiagramObject: DiagramObjects


WindGenTurbineType1aIEC -> InstanceSet: InstanceSet


WindGenTurbineType1aIEC -> Name: Names


WindGenTurbineType1aIEC -> ChangeSetMember: PropertiesCIMDataObject


WindGenTurbineType1aIEC -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<WindAeroConstIEC,`WindAeroConstIEC`>>
| 1
| xref::class/WindAeroConstIEC.adoc[`WindAeroConstIEC`]
| +++Wind aerodynamic model associated with this wind turbine type 1A model.+++

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 1
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this wind generator type 1 or type 2 model is associated.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<WindMechIEC,`WindMechIEC`>>
| 1
| xref::class/WindMechIEC.adoc[`WindMechIEC`]
| +++Wind mechanical model associated with this wind generator type 1 or type 2 model.+++

| <<WindProtectionIEC,`WindProtectionIEC`>>
| 1
| xref::class/WindProtectionIEC.adoc[`WindProtectionIEC`]
| +++Wind turbune protection model associated with this wind generator type 1 or type 2 model.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<RemoteInputSignal,`RemoteInputSignal`>>
| 0..1
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this wind generator type 1 or type 2 model.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this wind generator type 1 or type 2 model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType1or2Dynamics.AsynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/WindTurbineType1or2Dynamics.adoc[`WindTurbineType1or2Dynamics`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this wind generator type 1 or type 2 model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType1or2Dynamics.RemoteInputSignal`
| Cardinality
| 0..1
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/WindTurbineType1or2Dynamics.adoc[`WindTurbineType1or2Dynamics`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#WindAeroConstIEC]
=== `WindAeroConstIEC`
+++Wind aerodynamic model associated with this wind turbine type 1A model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindGenTurbineType1aIEC.WindAeroConstIEC`
| Cardinality
| 1
| Type
| xref::class/WindAeroConstIEC.adoc[`WindAeroConstIEC`]


|===

//[discrete]
[#WindMechIEC]
=== `WindMechIEC`
+++Wind mechanical model associated with this wind generator type 1 or type 2 model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType1or2IEC.WindMechIEC`
| Cardinality
| 1
| Type
| xref::class/WindMechIEC.adoc[`WindMechIEC`]

| Inherited from
| xref::class/WindTurbineType1or2IEC.adoc[`WindTurbineType1or2IEC`]


|===

//[discrete]
[#WindProtectionIEC]
=== `WindProtectionIEC`
+++Wind turbune protection model associated with this wind generator type 1 or type 2 model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WindTurbineType1or2IEC.WindProtectionIEC`
| Cardinality
| 1
| Type
| xref::class/WindProtectionIEC.adoc[`WindProtectionIEC`]

| Inherited from
| xref::class/WindTurbineType1or2IEC.adoc[`WindTurbineType1or2IEC`]


|===


